--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,15 @@
             <artifactId>hystrix-javanica</artifactId>
             <version>1.5.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
