--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
             <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
+
+
 
     </dependencies>
 
